Last modified: 2014-04-13 12:04:58 tkych

======================================================================
 Change Log for Quicksearch
======================================================================

Version dev, on github.com/lisp-maintainers/quicksearch

2024-07-29
Changed: quicksearch and qs:? now print the projects' URL and short desription by default.
         There is no need to specify the :url or (qs:? :ud) parameters anymore.
         There is also no way to unset these parameters with function arguments, only by using the global `*url-print?*` and `*description-print?*` parameters.
Changed: the Drakma library is replaced by Dexador for HTTP requests.
Changed: removed Iterate dependency.

2020-03-30
quicksearch: key arguments that start with a '?' are marked deprecated.
             Using them will throw an error with an explanation.
	     Use the same ones, without the '?'.

Version 0.1.04 (beta)
2014-04-13
Fix Bug : A string is given to `flexi-streams:octets-to-string'.
          This bug was found and fixed by g000001, thanks!
          c.f. http://g000001.cddddr.org/3606044400

Version 0.1.03 (beta)
2013-08-17
Added  : QuickDocs url for Quicklisp-serch reslut's description.

Version 0.1.02 (beta)
2013-08-08
Fix Bug: If QUICKSEARCH outputs the url for a system which is explicitly
       : depend on asdf, it might reload asdf, e.g. (qs:? "asdf-encodings" :u).
       : Probably asdf:find-system (via ql:where-is-system) is cause of this.
       : (it is not a bug for asdf:find-system, feature)
       : Prescription: ql:where-is-system -> asdf:locate-system.
       : Added 2013-08-10: This bug could occur if asdf is not the latest version.
Added  : error handling for fetching fail,
Kaizen : util STR.

Version 0.1.01 (beta)
2013-07-27
Refactored: CONFIG,
Added     : *USER-AGENT*, threading support check.

Version 0.1.00 (beta)
2013-06-21
Modified: github-search (advanced search -> api-v3).

Version 0.0.93 (alpha)
2013-06-13